# rust-web-demo

./: .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  askama.toml  build.rs  diesel.toml  docker-compose.yml  fly.toml  package-lock.json  package.json  sqlx-data.json  tailwind.config.js
.github/workflows/: ci.yml  deploy.yml
deploy/: Dockerfile
docs/: notes.md  research.md
migrations/: 20220122175227_people.down.sql  20220122175227_people.up.sql  20220427164619_seed.down.sql  20220427164619_seed.up.sql
migrations/2023-10-30-141526_people/: down.sql  up.sql
migrations/2023-10-30-141529_seed/: down.sql  up.sql
src/: assets.rs  diesel_ext.rs  gen_seed.rs  layout.rs  main.rs  migrations.rs  people.rs  schema.rs  schema.rs.patch  schema.rs.unpatched  scroll.rs  test.rs  typeahead.rs
src/frontend/: app.js  base.html  hello_controller.js  index.html
src/frontend/typeahead/: combobox_controller.js
templates/: greet.html  people.html
templates/typeahead/: index.html  results.html
ui/src/: app.js  base.html  main.css
ui/src/typeahead/: search_controller.js
ui/templates/: directory.html
ui/templates/scroll/: index.html  page.html
