[package]
name = "rust-web-demo"
version = "0.1.0"
edition = "2021"
default-run = "demo"

[[bin]]
name = "demo"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
axum = "0.6"
dotenvy = "0.15"
markup = "0.13"
mime_guess = "2"
once_cell = "1"
diesel = { version = "2.1", features = ["r2d2", "sqlite"] }
diesel_migrations = "2.1"
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
regex = "1"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
