[package]
name = "rust-web-demo"
version = "0.1.0"
edition = "2021"
default-run = "demo"

[[bin]]
name = "demo"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
markup = "0.15"
mime_guess = "2"
once_cell = "1"
diesel = { version = "2.1", features = ["sqlite"] }
diesel_migrations = "2.1"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
regex = "1"
rocket = "0.5"
rocket_sync_db_pools = { version = "0.1", features = ["diesel_sqlite_pool"]}
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
